--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@ along with this package; If not, see <http://www.gnu.org/licenses/>.
     <script type="text/javascript" src="po.js"></script>
 </head>
 
-<body>
-    <div id="app"></div>
+<body class="pf-v6-m-tabular-nums">
+    <div class="ct-page-fill" id="app"></div>
 </body>
 </html>
